--- a/www/p5-libapreq2/Makefile
+++ b/www/p5-libapreq2/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/08/06 06:19:41 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/08/22 18:28:43 tv Exp $
 
 DISTNAME=	libapreq2-2.06-dev
 PKGNAME=	p5-libapreq2-2.06
+PKGREVISION=	1
 SVR4_PKGNAME=	p5la2
 CATEGORIES=	www perl5
 MASTER_SITES=	http://www.apache.org/dist/httpd/libapreq/
