--- a/lang/python24/Makefile
+++ b/lang/python24/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.8 2005/05/10 22:27:44 abs Exp $
+# $NetBSD: Makefile,v 1.9 2005/07/03 19:48:22 recht Exp $
 #
 
 DISTNAME=	Python-2.4.1
 PKGNAME=	python24-2.4.1
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	lang python
 MASTER_SITES=	ftp://ftp.python.org/pub/python/2.4.1/
 EXTRACT_SUFX=	.tar.bz2
