--- a/sysutils/qlogtools/Makefile
+++ b/sysutils/qlogtools/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/21 17:24:24 martti Exp $
+# $NetBSD: Makefile,v 1.4 2005/08/07 11:47:55 schmonz Exp $
 #
 
 DISTNAME=		qlogtools-3.1
@@ -9,10 +9,13 @@ MAINTAINER=		zuntum@NetBSD.org
 HOMEPAGE=		http://untroubled.org/qlogtools/
 COMMENT=		Tools useful in analyzing logs from qmail and other pkgs
 
-BUILD_TARGET=		all
-
 DJB_RESTRICTED=		NO
-BGWARE_INSTALLER=	YES
+DJB_MAKE_TARGETS=	NO
+
+do-install:
+	${_PKG_SILENT}${_PKG_DEBUG}cd ${WRKSRC};			\
+	./installer;							\
+	./instcheck
 
 .include "../../mk/djbware.mk"
 .include "../../mk/bsd.pkg.mk"
