--- a/games/Makefile
+++ b/games/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.253 2005/08/08 00:11:01 dillo Exp $
+# $NetBSD: Makefile,v 1.254 2005/08/16 15:39:50 adam Exp $
 #
 
 COMMENT=	Games
@@ -68,8 +68,6 @@ SUBDIR+=	foobillard
 SUBDIR+=	fortune-strfile
 SUBDIR+=	fortunes-de
 SUBDIR+=	freeciv-client
-SUBDIR+=	freeciv-client-gtk
-SUBDIR+=	freeciv-client-gtk2
 SUBDIR+=	freeciv-manual
 SUBDIR+=	freeciv-server
 SUBDIR+=	freeciv-share
