--- a/databases/Makefile
+++ b/databases/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.179 2005/08/06 06:26:36 jlam Exp $
+# $NetBSD: Makefile,v 1.180 2005/08/08 09:50:04 drochner Exp $
 #
 
 COMMENT=	Databases
@@ -120,10 +120,10 @@ SUBDIR+=	postgresql74-plpython
 SUBDIR+=	postgresql74-server
 SUBDIR+=	postgresql80
 SUBDIR+=	postgresql80-client
-SUBDIR+=	postgresql80-server
 SUBDIR+=	postgresql80-plperl
 SUBDIR+=	postgresql80-plpython
 SUBDIR+=	postgresql80-pltcl
+SUBDIR+=	postgresql80-server
 SUBDIR+=	pxtools
 SUBDIR+=	py-IndexedCatalog
 SUBDIR+=	py-PgSQL
