--- a/print/imposter/Makefile
+++ b/print/imposter/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/07/21 16:29:56 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2005/08/10 20:56:23 jlam Exp $
 #
 
-DISTNAME=	imposter-0.2
-PKGREVISION=	1
+DISTNAME=	imposter-0.3
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=imposter/}
 
