--- a/games/pag/Makefile
+++ b/games/pag/Makefile
@@ -1,19 +1,18 @@
-# $NetBSD: Makefile,v 1.9 2005/04/11 21:45:56 tv Exp $
+# $NetBSD: Makefile,v 1.10 2005/05/22 20:08:02 jlam Exp $
 #
 
-DISTNAME=	pag-0.91
-PKGREVISION=	2
+DISTNAME=	pag-0.92
 CATEGORIES=	games
-MASTER_SITES=	http://pancake.host.sk/altres/src/
+MASTER_SITES=	http://cvs.nopcode.org/
 
 MAINTAINER=	pancake@phreaker.net
-HOMEPAGE=	http://pancake.host.sk/
+#HOMEPAGE=	http://pancake.host.sk/
 COMMENT=	Platform Arcade Game
 
 USE_TOOLS+=	gmake
 USE_NCURSES=	yes # missing function stdscr
 
-BUILD_TARGET=	compile
+GNU_CONFIGURE=	yes
 
 .include "../../devel/ncurses/buildlink3.mk"
 .include "../../graphics/aalib/buildlink3.mk"
