--- a/www/epiphany/Makefile
+++ b/www/epiphany/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.38 2005/08/10 20:56:25 jlam Exp $
+# $NetBSD: Makefile,v 1.39 2005/08/23 11:49:10 jmmv Exp $
 #
 
 DISTNAME=	epiphany-1.6.5
+PKGREVISION=	1
 CATEGORIES=	www gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/epiphany/1.6/}
 EXTRACT_SUFX=	.tar.bz2
@@ -48,7 +49,7 @@ GCONF2_SCHEMAS+=	epiphany-lockdown.schemas
 
 BUILDLINK_DEPENDS.glib2+=	glib2>=2.6.0
 BUILDLINK_DEPENDS.gnome-vfs2+=	gnome-vfs2>=2.10.0
-BUILDLINK_DEPENDS.gtk2+=	gtk2+>=2.6.3
+BUILDLINK_DEPENDS.gtk2+=	gtk2+>=2.6.10
 BUILDLINK_DEPENDS.pango+=	pango>=1.8.0
 
 .include "../../devel/GConf2/schemas.mk"
