--- a/inputmethod/imhangul/Makefile
+++ b/inputmethod/imhangul/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2005/07/21 16:29:52 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2005/08/10 20:56:18 jlam Exp $
 
-DISTNAME=	imhangul-0.9.11
-PKGREVISION=	1
+DISTNAME=	imhangul-0.9.12
 CATEGORIES=	inputmethod korean
-MASTER_SITES=	http://download.kldp.net/imhangul/
+MASTER_SITES=	http://kldp.net/frs/download.php/2570/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	minskim@NetBSD.org
