--- a/x11/gtk2-engines/Makefile
+++ b/x11/gtk2-engines/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.32 2005/07/21 16:30:00 wiz Exp $
+# $NetBSD: Makefile,v 1.33 2005/08/10 20:56:29 jlam Exp $
 
-DISTNAME=		gtk-engines-2.6.3
+DISTNAME=		gtk-engines-2.6.5
 PKGNAME=		${DISTNAME:S/gtk/gtk2/}
 CATEGORIES=		x11
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gtk-engines/2.6/}
