--- a/mail/evolution-data-server/Makefile
+++ b/mail/evolution-data-server/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2005/07/21 16:29:52 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2005/08/10 20:56:19 jlam Exp $
 #
 
 DISTNAME=	evolution-data-server-1.2.3
@@ -7,7 +7,7 @@ MASTER_SITES=	${MASTER_SITE_GNOME:=sources/evolution-data-server/1.2/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
-HOMEPAGE=	http://ximian.com/products/evolution/
+HOMEPAGE=	http://www.gnome.org/projects/evolution/
 COMMENT=	Evolution data server
 
 BUILD_USES_MSGFMT=	yes
