--- a/databases/gramps2/Makefile
+++ b/databases/gramps2/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2005/07/21 16:29:45 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2005/08/10 20:56:14 jlam Exp $
 #
 
-DISTNAME=		gramps-2.0.5
+DISTNAME=		gramps-2.0.6
 CATEGORIES=		databases
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=gramps/}
 
