--- a/math/dcdflib.c/Makefile
+++ b/math/dcdflib.c/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2004/01/20 12:20:04 agc Exp $
+# $NetBSD: Makefile,v 1.13 2004/05/04 20:20:50 minskim Exp $
 
 DISTNAME=	dcdflib.c-1.1
 PKGREVISION=	1
@@ -13,9 +13,10 @@ WRKSRC=		${WRKDIR}/dcdflib.c/src
 DIST_SUBDIR=	${PKGNAME_NOREV}
 MAKE_ENV+=	LIBOWN=${LIBOWN} LIBGRP=${LIBGRP}
 
+INSTALLATION_DIRS=	include share/doc/dcdflib.c
+
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/../doc/dcdflib.h ${PREFIX}/include
-	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/dcdflib.c
 	cd ${WRKDIR}/dcdflib.c/ && ${INSTALL_DATA} README 		\
 	doc/dcdflib.chs doc/dcdflib.fdoc ${PREFIX}/share/doc/dcdflib.c/
 
