--- a/www/firefox-bin-acroread7/Makefile
+++ b/www/firefox-bin-acroread7/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2004/02/10 12:26:24 grant Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/08/26 22:16:45 xtraeme Exp $
 
 DISTNAME= 		MozillaFirebird-bin-acroread7-1.0
 
@@ -6,7 +6,7 @@ MAINTAINER=		kei@NetBSD.org
 COMMENT=		Acrobat Reader 5 plugin for firefox-bin
 
 DEPENDS+=		acroread7>=7.0:../../print/acroread7
-CONFLICTS+=		firefox-bin-acroread7-[0-9]*
+CONFLICTS+=		firefox-bin-acroread5-[0-9]*
 CONFLICTS+=		firefox-bin-acroread3-[0-9]*
 CONFLICTS+=		firefox-bin-acroread-[0-9]*
 
