--- a/x11/ebuilder/Makefile
+++ b/x11/ebuilder/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2005/06/01 18:03:28 jlam Exp $
+# $NetBSD: Makefile,v 1.26 2005/06/17 03:50:43 jlam Exp $
 #
 
 DISTNAME=	ebuilder-0.56d
@@ -11,7 +11,7 @@ HOMEPAGE=	http://web.inter.nl.net/users/eavdmeer/index.html
 COMMENT=	GUI builder for the Qt library
 
 WRKSRC=		${WRKDIR}/${DISTNAME}
-USE_TOOLS+=	gmake
+USE_TOOLS+=	flex gmake
 MAKEFILE=	GNUmakefile
 
 MAKE_ENV+=	CXXFLAGS="${CXXFLAGS}"
