--- a/security/gpa/Makefile
+++ b/security/gpa/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/07/21 16:29:56 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2005/08/10 20:56:23 jlam Exp $
 #
 
 DISTNAME=	gpa-0.7.0
@@ -14,6 +14,9 @@ USE_TOOLS+=		pkg-config
 GNU_CONFIGURE=		YES
 USE_PKGLOCALEDIR=	YES
 
+LIBS+=			${BUILDLINK_LDADD.getopt}
+
+.include "../../devel/libgetopt/buildlink3.mk"
 .include "../../security/gpgme/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
