--- a/chat/irchat-pj/Makefile
+++ b/chat/irchat-pj/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/04/11 21:45:04 tv Exp $
+# $NetBSD: Makefile,v 1.9 2005/05/24 13:59:13 rillig Exp $
 
 DISTNAME=	irchat-pj-2.4.24.22
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	chat
 MASTER_SITES=	http://irc.fan.gr.jp/pj/src/
 
