--- a/chat/riece/Makefile
+++ b/chat/riece/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/11/30 08:18:39 uebayasi Exp $
+# $NetBSD: Makefile,v 1.2 2005/03/05 09:14:11 uebayasi Exp $
 #
 
 DISTNAME=	riece-1.0.7a
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	chat japanese
 MASTER_SITES=	http://savannah.nongnu.org/download/riece/
 
