--- a/chat/zenirc/Makefile
+++ b/chat/zenirc/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2003/06/27 16:10:01 seb Exp $
+# $NetBSD: Makefile,v 1.7 2003/07/17 21:26:31 grant Exp $
 #
 
 DISTNAME=	zenirc-2.112
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	chat
 MASTER_SITES=	ftp://ftp.splode.com/pub/zenirc/
 
