--- a/devel/apel/Makefile
+++ b/devel/apel/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2004/12/03 15:14:54 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2005/03/05 16:33:07 minskim Exp $
 
 DISTNAME=	apel-10.6
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.m17n.org/pub/mule/apel/
 
