--- a/devel/elib/Makefile
+++ b/devel/elib/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2004/01/22 08:24:29 grant Exp $
+# $NetBSD: Makefile,v 1.12 2005/05/22 20:07:50 jlam Exp $
 #
 
 DISTNAME=	elib-1.0
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 PKGREVISION?=	2
 CATEGORIES=	devel
 MASTER_SITES=	http://jde.sunsite.dk/
