--- a/devel/haskell-mode/Makefile
+++ b/devel/haskell-mode/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2003/06/02 01:20:45 jschauma Exp $
+# $NetBSD: Makefile,v 1.13 2003/07/17 21:31:03 grant Exp $
 
 DISTNAME=		haskell-mode-1.44
+PKGNAME=		${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=		devel editors
 MASTER_SITES=		http://www.haskell.org/haskell-mode/
 
