--- a/devel/pcl-cvs/Makefile
+++ b/devel/pcl-cvs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2003/11/18 16:29:50 cube Exp $
+# $NetBSD: Makefile,v 1.10 2004/12/03 15:14:55 wiz Exp $
 #
 
 DISTNAME=	pcl-cvs-2.9.9
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	ftp://rum.cs.yale.edu/pub/monnier/pcl-cvs/
