--- a/devel/pvs/Makefile
+++ b/devel/pvs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2005/04/11 21:45:37 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/06/16 06:57:47 jlam Exp $
 #
 
 DISTNAME=		pvs-${VERSION}
+PKGNAME=		${EMACS_PKGNAME_PREFIX}${DISTNAME}
 PKGREVISION=		2
 CATEGORIES=		devel lang
 MASTER_SITES=		ftp://pvs.csl.sri.com/pub/pvs/pvs${VERSION}/ \
