--- a/devel/python-mode/Makefile
+++ b/devel/python-mode/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2004/12/05 13:40:56 ben Exp $
+# $NetBSD: Makefile,v 1.12 2005/06/16 06:57:47 jlam Exp $
 #
 
 DISTNAME=	python-mode-4.54
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=python-mode/}
 DISTFILES=	python-mode.el
