--- a/devel/ruby-mode/Makefile
+++ b/devel/ruby-mode/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2004/11/27 14:55:25 taca Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/08 14:30:32 taca Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
-PKGNAME=	${RUBY_PKGPREFIX}-mode-${RUBY_VERSION}
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${RUBY_PKGPREFIX}-mode-${RUBY_VERSION}
 CATEGORIES=	devel ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
