--- a/editors/leim/Makefile
+++ b/editors/leim/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2005/02/26 16:26:30 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2005/05/22 20:07:56 jlam Exp $
 
 DISTNAME=	leim-${VERSION}
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_GNU:=emacs/}
 DISTFILES=	emacs-${VERSION}a${EXTRACT_SUFX} ${DISTNAME}${EXTRACT_SUFX}
