--- a/inputmethod/tc/Makefile
+++ b/inputmethod/tc/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2004/11/27 17:54:31 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2005/05/22 20:08:08 jlam Exp $
 #
 
 DISTNAME=	tc-2.3.1
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	japanese inputmethod
 MASTER_SITES=	http://openlab.ring.gr.jp/tcode/resources/soft/
 
