--- a/lang/twelf/Makefile
+++ b/lang/twelf/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2004/12/03 15:15:01 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2005/06/16 06:58:01 jlam Exp $
 #
 
 DISTNAME=	twelf-1-4
-PKGNAME=	twelf-1.4
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	http://www.cs.cmu.edu/~twelf/dist/
