--- a/mail/gnus/Makefile
+++ b/mail/gnus/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2005/04/08 19:00:15 jwise Exp $
+# $NetBSD: Makefile,v 1.8 2005/04/08 19:05:58 jwise Exp $
 
 DISTNAME=	gnus-5.10.6
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	mail
 MASTER_SITES=	http://quimby.gnus.org/gnus/dist/
 
