--- a/mail/mailcrypt/Makefile
+++ b/mail/mailcrypt/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2003/08/11 15:57:42 seb Exp $
+# $NetBSD: Makefile,v 1.9 2005/03/24 21:12:56 wiz Exp $
 
 DISTNAME=	mailcrypt-3.5.8
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	mail security
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mailcrypt/}
 
