--- a/math/calc/Makefile
+++ b/math/calc/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2003/08/09 11:11:28 seb Exp $
+# $NetBSD: Makefile,v 1.13 2005/06/17 03:50:19 jlam Exp $
 
 DISTNAME=	calc-2.02f
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 PKGREVISION=	1
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_GNU:=calc/}
