--- a/math/ess/Makefile
+++ b/math/ess/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2005/06/17 03:50:20 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2005/07/16 01:19:13 jlam Exp $
 
 DISTNAME=	ess-5.1.24
+PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	math
 MASTER_SITES=	http://software.biostat.washington.edu/ess/
 
