--- a/misc/bbdb/Makefile
+++ b/misc/bbdb/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2005/04/11 21:46:33 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/17 03:50:21 jlam Exp $
 #
 
 DISTNAME=		bbdb-2.34
+PKGNAME=		${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=		mail misc news
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=bbdb/}
 
