--- a/textproc/psgml-mode/Makefile
+++ b/textproc/psgml-mode/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/05/05 05:59:56 hrs Exp $
+# $NetBSD: Makefile,v 1.9 2005/06/17 03:50:37 jlam Exp $
 
 DISTNAME=		psgml-1.3.2
-PKGNAME=		${DISTNAME:S/-/-mode-/}
+PKGNAME=		${EMACS_PKGNAME_PREFIX}${DISTNAME:S/-/-mode-/}
 CATEGORIES=		textproc editors
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=psgml/}
 
