--- a/textproc/xslide/Makefile
+++ b/textproc/xslide/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2004/04/18 19:42:18 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2005/04/11 21:47:43 tv Exp $
 #
 
 DISTNAME=		xslide-0.2.2
+PKGNAME=		${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=		textproc
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=xslide/}
 
