--- a/databases/gnats/Makefile
+++ b/databases/gnats/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2005/08/23 11:48:47 rillig Exp $
+# $NetBSD: Makefile,v 1.20 2005/08/27 22:24:02 recht Exp $
 
 DISTNAME=	gnats-4.1.0
+PKGREVISION=	1
 CATEGORIES=	databases
 MASTER_SITES=	${MASTER_SITE_GNU:=gnats/}
 
