--- a/x11/xterm/Makefile
+++ b/x11/xterm/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2005/06/04 17:42:31 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2005/06/12 05:06:11 jlam Exp $
 
-DISTNAME=	xterm-202
+DISTNAME=	xterm-203
 CATEGORIES=	x11
 MASTER_SITES=	ftp://invisible-island.net/xterm/
 EXTRACT_SUFX=	.tgz
