--- a/mail/elmo/Makefile
+++ b/mail/elmo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2005/04/11 21:46:18 tv Exp $
+# $NetBSD: Makefile,v 1.6 2005/07/16 15:40:56 wiz Exp $
 #
 
 DISTNAME=		elmo-1.3.2
@@ -16,6 +16,7 @@ GNU_CONFIGURE=		yes
 REPLACE_PERL=		elmoconf.pl
 
 CONFIGURE_ARGS+=	--with-gpgme-prefix=${BUILDLINK_PREFIX.gpgme}
+CONFIGURE_ARGS+=	--with-openssl=${BUILDLINK_PREFIX.openssl}
 # I get segmentation faults when not compiled with debug enabled
 CONFIGURE_ARGS+=	--enable-debug
 
