--- a/games/kdegames3/Makefile
+++ b/games/kdegames3/Makefile
@@ -1,12 +1,15 @@
-# $NetBSD: Makefile,v 1.30 2004/10/13 12:54:56 markd Exp $
+# $NetBSD: Makefile,v 1.31 2005/04/11 21:45:51 tv Exp $
 
 DISTNAME=	kdegames-${_KDE_VERSION}
+PKGREVISION=	1
 CATEGORIES=	games
 COMMENT=	Games for the KDE integrated X11 desktop
 
 .include "../../meta-pkgs/kde3/Makefile.kde3"
 
 USE_DIRS+=		xdg-1.1
+
+CONFIGURE_ARGS+=	--disable-setgid
 
 .include "../../meta-pkgs/kde3/kde3.mk"
 .include "../../x11/kdebase3/buildlink3.mk"
